Lösung Aufgabe 1 - add footer fragment

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <!-- Einbinden des Fragments footer -->
-    <!-- <header th:insert="fragments/footer :: site-footer"></header> -->
+    <footer th:insert="fragments/footer :: site-footer"></footer>
 
 </div>
 
